testcases/pos/labeled/branching_on_secret.bard
let val s = true raisedTo {secret}
in
    if s then 2 else 5
end
