testcases/neg/labeled/send_after_secret_context.bard
let val b = true raisedTo {secret}
    val x = if b then 5 else 8
in
    send 42
end
